--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@ body{
     background: linear-gradient(#AEC09A, #BBC6C8);
 }
 h1{
-    font-size: 50px;
+    font-size: 54px;
     margin: 30px 0;
 }
 a{
@@ -22,19 +22,30 @@ footer{
     font-family: 'Parisienne', cursive;
     font-size: 40px;
 }
+.myfoto{
+    width: 200px;
+    border-radius: 7px;
+    margin-top: 30px;
+}
 .main_text{
     text-align: center;
+    font-family: 'Parisienne', cursive;
+}
+.about_info{
+    font-size: 26px;
+    font-family: 'Oregano', cursive;
 }
 .contact_btn{
 display: block;
-width: 110px;
-padding: 2px;
+width: 200px;
+padding: 15px;
 margin: 30px auto;
 text-align: center;
 border: 1px solid black;
 border-radius: 7px;
 color: black;
 font-family: 'Parisienne', cursive;
+font-size: 30px;
 background-color: BBC6C8;
 }
 
