--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@ a{
 footer{
     display: flex;
     justify-content: space-around;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 .logo{
@@ -48,7 +48,15 @@ font-family: 'Parisienne', cursive;
 font-size: 30px;
 background-color: BBC6C8;
 }
-
+.certificates{
+    margin: 40px 0;
+    display: flex;
+    justify-content: space-around;
+}
+.certificates_info h2{
+    text-align: center;
+    font-family: 'Parisienne', cursive;
+}
 .project{
     display: flex;
     margin: 60px 0;
@@ -59,7 +67,7 @@ background-color: BBC6C8;
 .second{
     margin-right: 30px;
 }
-.project_descr h2{
+.project_descr h2, .certificates_info h2{
     text-align: center;
     font-family: 'Parisienne', cursive;
     margin-top: 30px;
