--- a/style/style.css
+++ b/style/style.css
@@ -12,12 +12,6 @@ h1{
 a{
     text-decoration: none;
 }
-footer{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 60px;
-}
-
 .logo{
     font-family: 'Parisienne', cursive;
     font-size: 40px;
@@ -48,14 +42,19 @@ font-family: 'Parisienne', cursive;
 font-size: 30px;
 background-color: BBC6C8;
 }
+.certificates_block{
+    background-color: #AEC09A;
+    padding: 12px;
+    margin: 30px 0;
+    box-shadow: 0 0 6px grey;
+}
 .certificates{
     margin: 40px 0;
-    display: flex;
-    justify-content: space-around;
 }
-.certificates_info h2{
+.certificates_name{
     text-align: center;
-    font-family: 'Parisienne', cursive;
+    font-size: 40px;
+    font-family: 'Oregano', cursive;
 }
 .project{
     display: flex;
@@ -72,11 +71,20 @@ background-color: BBC6C8;
     font-family: 'Parisienne', cursive;
     margin-top: 30px;
 }
-.contact_link{
-    font-size: 24px;
-    text-align: center;
-    font-family: 'Parisienne', cursive;
+
+.contact_link {
+    margin: 24px 0;
 }
 .contact_link i{
-    margin-bottom: 30px;
+    margin-bottom: 12px;
+}
+.contact_link span{
+    font-size: 24px;
+    text-align: center;
+    font-family: 'Oregano', cursive;
+}
+.link_github{
+    text-align: center;
+    font-size: 24px;
+    font-family: 'Oregano', cursive;
 }
